# ncs311_https_client_memfault_nrf7002dk

./: CMakeLists.txt  Kconfig  Kconfig.sysbuild  overlay-memfault.conf  pm_static_nrf7002dk_nrf5340_cpuapp.yml  sample.yaml  sysbuild.conf
boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
config/: memfault_metrics_heartbeat_config.def
src/: main.c  mflt_backend_services.c  mflt_backend_services.h  mflt_ota_triggers.c  mflt_ota_triggers.h  mflt_services.c  mflt_services.h  mflt_stack_metrics.c  mflt_stack_metrics.h  mflt_wifi_metrics.c  mflt_wifi_metrics.h
sysbuild/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.overlay
